[package]
name = "pruning_radix_trie"
version = "0.2.2"
edition = "2021"
authors = ["Peter Allwin <peter@allwin.se>"]
repository = "https://github.com/peterall/pruning_radix_trie.git"
homepage = "https://github.com/peterall/pruning_radix_trie.git"
license = "MIT"
readme = "README.md"
description = "Rust implementation of Pruning Radix Trie by Wolf Garbe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
